--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@ description: "Some short description of your blog can go here." # This will show
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
-#facebook_username: username
-#flickr_username: username
-#instagram_username: username
-#pinterest_username: username
-#youtube_username: username
-#googleplus_username: +username
+# email: "example@mail.com"
+twitter_username: "@johnmmweb"
+github_username: "jmuldvp"
+# linkedin_username: "linkedinuser"
+# facebook_username: username
+# flickr_username: username
+# instagram_username: username
+# pinterest_username: username
+# youtube_username: username
+# googleplus_username: +username
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
